# MiniCppStarter

./: CMakeLists.txt  main.cpp
